--- a/todos.org
+++ b/todos.org
@@ -4,25 +4,9 @@
 
 ---
 
-* Current Pages
-  : Book currenly reading 
-** DONE page 64
-   CLOSED: [2019-02-22 Fri 23:21]
-** DONE page 70
-   CLOSED: [2019-02-26 Tue 21:26]
-** DONE page 78
-   CLOSED: [2019-02-23 Sat 23:20]
-** DONE page 79
-   CLOSED: [2019-02-23 Sat 23:48]
-** DONE page 93
-   CLOSED: [2019-02-25 Mon 23:48]
-** DONE page 100
-   CLOSED: [2019-02-25 Mon 23:48]
-** DONE page 105
-   CLOSED: [2019-02-26 Tue 23:51]
-** DONE page 107
-   CLOSED: [2019-02-27 Wed 17:33]
-** page 111   
+* Current Page
+    : show current page reading
+** page 112   
 
 
 * Agenda
@@ -57,6 +41,10 @@
     switch v := event.(type){ ... }
     and catch '*sdl.JoyAxisEvent to get access to joysticks
     'which and 'value variables
+** DONE input keyboard not working
+    - method to get key press was inside 'if JoySticksInitialised'
+    and so was not being called because no joystick was active.
+    So just moved it outside if statment within player.HandleInput
 
 
 * Interesting  
